<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.linalgs.practica11.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lado"
                android:textColor="@color/black"
                android:textSize="25sp"/>
            <EditText
                android:id="@+id/eLado"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:hint="ingrese lado"
                android:inputType="number"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorAccent"
                android:textSize="20sp"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio"
                android:textColor="@color/black"
                android:textSize="25sp"/>
            <EditText
                android:id="@+id/eRadio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:hint="ingrese Radio"
                android:inputType="number"
                android:textColor="@color/black"
                android:textColorHint="@color/colorAccent"
                android:textSize="20sp"/>

        </LinearLayout>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/cCuadro"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/cuadro"/>
            <RadioButton
                android:id="@+id/cCirculo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/circulo"/>
            <RadioButton
                android:id="@+id/cTriangulo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/triangulo"/>
            <RadioButton
                android:id="@+id/cCubo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cubo"/>

        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/cCalcular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryDark"
                android:onClick="Calcular"
                android:text="@string/calcular"
                android:textAllCaps="false"
                android:textColor="@color/colorAccent"
                android:textSize="30sp"/>

        </LinearLayout>

        <TextView
            android:id="@+id/tResultado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/resultado"
            android:textColor="@color/black"
            android:gravity="center"
            android:textSize="25sp"/>
    </LinearLayout>


</LinearLayout>
